force-app/main/default/objects/ProjectMember__c/ProjectMember__c.object-meta.xml
<CustomObject>
    <label>프로젝트 멤버</label>
    <nameField>
        <label>프로젝트멤버</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>프로젝트 멤버</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>