force-app/main/default/objects/ProjectMember__c/fields/fm_ProjectEndDate__c.field-meta.xml
<CustomField>
    <fullName>fm_ProjectEndDate__c</fullName>
    <formula>Project__r.EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>프로젝트 종료일</label>
    <type>Date</type>
</CustomField>