force-app/main/default/objects/ProjectMember__c/fields/fm_ProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>fm_ProjectStartDate__c</fullName>
    <formula>Project__r.StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>프로젝트 시작일</label>
    <type>Date</type>
</CustomField>